--- a/Lab 09/src/hust/soict/cttn/aims/.gitignore
+++ b/Lab 09/src/hust/soict/cttn/aims/.gitignore
@@ -1,3 +1,22 @@
 /Aims.class
 /DiskTest.class
 /MemoryDaemon.class
+/Aims$1.class
+/Aims$10.class
+/Aims$11.class
+/Aims$12.class
+/Aims$13.class
+/Aims$14.class
+/Aims$15.class
+/Aims$16.class
+/Aims$17.class
+/Aims$18.class
+/Aims$2.class
+/Aims$3.class
+/Aims$4.class
+/Aims$5.class
+/Aims$6.class
+/Aims$7.class
+/Aims$8.class
+/Aims$9.class
+/test.class
